# Flight-Sensor-Hub

./: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  packet_decoder.py
.github/workflows/: ci.yml
cmsis/: CMakeLists.txt
freertos/: CMakeLists.txt  FreeRTOSConfig.h
linker/: STM32F446RE.ld
src/: CMakeLists.txt  main.c
src/app/: flight_data.h  processing_task.c  processing_task.h  sensor_task.c  sensor_task.h  telemetry_task.c  telemetry_task.h
src/bsp/: adc.c  adc.h  clock.c  clock.h  dma.c  dma.h  gpio.c  gpio.h  uart.c  uart.h
src/util/: ring_buffer.c  ring_buffer.h
startup/: startup_stm32f446xx.c
